2014-01-08  Charlie Zender  <zender@uci.edu>

	* Fix subtle bug when overwriting attributes during autoconversion

2014-01-07  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.0 release procedure:
 	Changes since nco-4_3_9: hash, dyn mmr, ncra.c fixes, hdf4, autocnv, hdn, cnk
	cd ~/nco;cvs tag -d nco-4_4_0;cvs tag -d nco-4_4_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.0 release"
	cvs tag -c nco-4_4_0;cvs tag -c nco-4_4_0-1

	* Verify yellowstone build is clean, improve chunking error-tolerance

2014-01-07  Pedro Vicente  <pvicente@uci.edu>

	* Add ncpdq regression #46: Chunking -a lon,lat --cnk_dmn lat,1 --cnk_dmn lon,2 -v lat_2D_rct

	* Add ncecat regression #12: Chunking -v four_dmn_rec_var --cnk_dmn lat,2 --cnk_dmn lon,4

	* Add ncwa regression #57: Chunking with --rdd

2014-01-06  Pedro Vicente  <pvicente@uci.edu>

	* Add ncwa regression #55: Chunking -a time --cnk_dmn lon,4 -v byt_3D_rec

	* Add ncwa regression #56: Chunking -a /time --cnk_dmn /time,1 -v time

2014-01-06  Charlie Zender  <zender@uci.edu>

	* Use "_ChunkSizes" (plural) not "_ChunkSize" (singular) in NcML output

	* Add cnk_map argument to some executables that were missing it

	* Fix recidivist bug where if(sng_cnv_rcd) used instead of if(*sng_cnv_rcd)

2014-01-05  Pedro Vicente  <pvicente@uci.edu>

	* Add ncecat regression #11: Chunking --cnk_plc=all

2014-01-05  Charlie Zender  <zender@uci.edu>

	* Base default cnk_sz_byt on output filesystem blocksize

	* Add chk_sz_byt/cnk_byt input to all netCDF4 writers

2014-01-03  Charlie Zender  <zender@uci.edu>

	* Implement map_lfp and begin accounting for type size and chunk size in bytes

	* Implement plc_xst and map_xst

	* Implement plc_xpl and correct detour when must_be_chunked

	* Add stubs for two new (and not-yet-supported) chunking maps: map_xst and map_lfp

	* Verified nccopy does not preserve pre-set _Chunksizes when copying variables

	* Revert to completing nco_cnk_sz_set_trv() only when user-specified
